# TinyCurl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
argParse/: CMakeLists.txt  argParse.h  argeParse.c
arg_parse/: CMakeLists.txt  arg_parse.c  arg_parse.h
include/tcurl/: tculr.h  tcurl.h
libs/arg_parse/: CMakeLists.txt  Makefile  arg_parse.c  arg_parse.h
src/: main.c  send_http_request.c  send_http_request.h  socket.c  socket.h
